Update boilerplate for use with my domain

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "react-github-pages",
-  "description": "Single Page Apps for GitHub Pages",
+  "description": "Sticky hover on mobile tests",
   "author": "Rafael Pedicini <code@rafrex.com>",
   "license": "MIT",
   "private": "true",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rafrex/spa-github-pages.git"
+    "url": "git+https://github.com/rafrex/sticky-hover.git"
   },
   "bugs": {
-    "url": "https://github.com/rafrex/spa-github-pages/issues"
+    "url": "https://github.com/rafrex/sticky-hover/issues"
   },
-  "homepage": "https://github.com/rafrex/spa-github-pages#readme",
+  "homepage": "https://github.com/rafrex/sticky-hover#readme",
   "dependencies": {
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
