--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
   "name": "react-github-pages",
   "description": "Sticky hover on mobile tests",
-  "author": "Rafael Pedicini <code@rafrex.com>",
-  "license": "MIT",
-  "private": "true",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rafrex/sticky-hover.git"
   },
-  "bugs": {
-    "url": "https://github.com/rafrex/sticky-hover/issues"
-  },
-  "homepage": "https://github.com/rafrex/sticky-hover#readme",
+  "author": "Rafael Pedicini <code@rafrex.com>",
+  "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "detect-touch": "^1.1.0",
     "radium": "^0.17.1",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-router": "^2.4.0",
-    "webpack": "^1.13.0"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^2.5.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.5.0",
+    "webpack": "^1.13.1"
   }
 }
